test/bad/class2.pacc
/*
nopacc 5:22 'expected "-", or "]"'
*/

Bad :: char * ← [a-c-x-z] → { "foo" }
